# color-ensemble

./: .gitignore  .pre-commit-config.yaml  README.md  start_dev.sh  zip_project.sh
.github/workflows/: healthcheck.yaml  main.yaml
client/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
client/src/: App.tsx  main.tsx
client/src/components/: AuthPanel.tsx  ColorInputs.tsx  ColorWheel.css  ColorWheel.tsx  Navbar.tsx
client/src/components/OutputPanel/: EnsemblesPanel.css  EnsemblesPanel.tsx  FavHarmoniesPanel.tsx  FavoritesPanel.css  FavoritesPanel.tsx  main.tsx
client/src/hooks/: AuthProvider.tsx  ColorProvider.tsx  FavoritesProvider.tsx  colorUtils.ts  useAuth.ts  useAuthContext.tsx  useColor.tsx  useFavorite.tsx
client/src/pages/: Home.css  Home.tsx
client/src/services/: api.ts  auth.ts  favorites.ts
client/src/types/: color.ts  state.ts
client/tests/e2e/: base.spec.ts
client/tests/unit/: auth.test.tsx  color-wheel.test.tsx
server/: pyproject.toml
server/app/: main.py  run.py
server/app/api/: auth.py  colors.py  deps.py  rate_limit.py  users.py
server/app/core/: config.py  security.py
server/app/db/: models.py  session.py
server/app/schema/: color.py  user.py
server/app/services/: color_harmony.py
server/tests/: conftest.py  test_auth.py  test_colors.py
